tests/functional2/lang/attrs-__overrides/parse-fail-rec.err.exp
error: __overrides attributes are deprecated and will be removed in the future. Use --extra-deprecated-features rec-set-overrides to silence this warning.
       at /pwd/in.nix:1:8:
            1| rec  { __overrides.foo = 2; }
             |        ^
            2|
